# learn

./: .gitignore  README.md
compsci/c/clang-inaction/c_in_action_ex/: CMakeLists.txt
compsci/c/clang-inaction/c_in_action_ex/src/04_from_src2prog/: build.bat  build.sh  main.c  multiply.h
compsci/c/clang-inaction/c_in_action_ex/src/05_types_and_declare/: basic_types.c  scope.c
compsci/c/clang-inaction/c_in_action_ex/src/09_pointerarrays/: pointer_arrays.c
compsci/c/clang-inaction/c_in_action_ex/src/11_input_output/: io_examples.c
compsci/c/clang-inaction/c_in_action_ex/src/12_strings/: string_ops.c
compsci/c/clang-inaction/c_in_action_ex/src/13_fromc_to_cpp/: connection.cpp
compsci/c/clang-inaction/c_in_action_ex/src/util/: ufuncs.c  ufuncs.h
compsci/unix/clang-inaction/c_in_action_ex/: CMakeLists.txt
compsci/unix/clang-inaction/c_in_action_ex/src/02_getting_started_w_gcc/: compile_gcc_wall_c99_named.sh  sample.c
compsci/unix/clang-inaction/c_in_action_ex/src/03_tour_of_clang/: temperature_w_func.c
compsci/unix/clang-inaction/c_in_action_ex/src/04_from_src2prog/: multiply.c
compsci/unix/clang-inaction/c_in_action_ex/src/06-structs-unions/: struct_union.c
compsci/unix/clang-inaction/c_in_action_ex/src/07_statements/: loop_switch (1).c
compsci/unix/clang-inaction/c_in_action_ex/src/08_expressions/: conversion_incrementator.c
compsci/unix/clang-inaction/c_in_action_ex/src/10_memorymgmt/: mem_malloc.c
compsci/unix/clang-inaction/c_in_action_ex/src/13_fromc_to_cpp/: build_cpp.sh
coursera/: README.md
dasi/: pdftk_example.txt
datan_datatable_way/: dt_sheet_pract.R
dswr_machine_learning_toolbox/: machine_learning_toolbox.ipynb  ml_caret_pract.R
fin_bond_valuation/: bond_valuate.ipynb  bond_valuate_pract.R
intro_ml/: air.csv  iml_practice.R  (+6 more)
(+1733 files in other folders)
